--- a/JQ_MemoryGame/memory.html
+++ b/JQ_MemoryGame/memory.html
@@ -2,7 +2,7 @@
 <head>
 <title>Memory Game</title>
 
-<script src ="./jquery-1.11.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <link rel="stylesheet" name="style1" type="text/css" href="./memory.css">
 </head>
 <body>
